syntax = "proto3";
// id = 9012
message ApaasUserJoin {
  int64 lts = 1; // 时间戳，必须存在
  int32 vid = 2; // vid
  string ver = 3; // apaas版本号
  string scenario = 4; // apaas场景，如education/meeting/entertainment
  int32 errorCode = 5; // 异常码，若有
  string uid = 6; // apaas用户id，同RTM uid
  string userName = 7; // 用户名，用于显示
  int64 streamUid = 8; // rtc流id
  string streamSuid = 9; // rtc流id
  string role = 10; // apaas角色
  string streamSid = 11; // rtc sid
  string rtmSid = 12; // rtm sid
  string roomId = 13; // apaas房间id，与rtc/rtm channelName相同
  int64 roomCreateTs = 14; // 房间创建时间
}
// id = 9013
message ApaasUserQuit {
  int64 lts = 1; // 时间戳，必须存在
  int32 vid = 2; // vid
  string ver = 3; // apaas版本号
  string scenario = 4; // apaas场景，如education/meeting/entertainment
  int32 errorCode = 5; // 异常码，若有
  string uid = 6; // apaas用户id，同RTM uid
  string userName = 7; // 用户名，用于显示
  int64 streamUid = 8; // rtc流id
  string streamSuid = 9; // rtc流id
  string role = 10; // apaas角色
  string streamSid = 11; // rtc sid
  string rtmSid = 12; // rtm sid
  string roomId = 13; // apaas房间id，与rtc/rtm channelName相同
  int64 roomCreateTs = 14; // 房间创建时间
}
// id = 9014
message ApaasUserReconnect {
  int64 lts = 1; // 时间戳，必须存在
  int32 vid = 2; // vid
  string ver = 3; // apaas版本号
  string scenario = 4; // apaas场景，如education/meeting/entertainment
  int32 errorCode = 5; // 异常码，若有
  string uid = 6; // apaas用户id，同RTM uid
  string userName = 7; // 用户名，用于显示
  int64 streamUid = 8; // rtc流id
  string streamSuid = 9; // rtc流id
  string role = 10; // apaas角色
  string streamSid = 11; // rtc sid
  string rtmSid = 12; // rtm sid
  string roomId = 13; // apaas房间id，与rtc/rtm channelName相同
  int64 roomCreateTs = 14; // 房间创建时间
}
// id = 9017
message ScreenShareStar {
  int64 lts = 1; // 时间戳，必须存在
  int32 vid = 2; // vid
  string ver = 3; // apaas版本号
  string scenario = 4; // apaas场景，如education/meeting/entertainment
  int32 errorCode = 5; // 异常码，若有
  string uid = 6; // apaas用户id，同RTM uid
  string userName = 7; // 用户名，用于显示
  int64 streamUid = 8; // rtc流id
  string streamSuid = 9; // rtc流id
  string role = 10; // apaas角色
  string streamSid = 11; // rtc sid
  string rtmSid = 12; // rtm sid
  string roomId = 13; // apaas房间id，与rtc/rtm channelName相同
  int64 roomCreateTs = 14; // 房间创建时间
}
// id = 9019
message ScreenShareEnd {
  int64 lts = 1; // 时间戳，必须存在
  int32 vid = 2; // vid
  string ver = 3; // apaas版本号
  string scenario = 4; // apaas场景，如education/meeting/entertainment
  int32 errorCode = 5; // 异常码，若有
  string uid = 6; // apaas用户id，同RTM uid
  string userName = 7; // 用户名，用于显示
  int64 streamUid = 8; // rtc流id
  string streamSuid = 9; // rtc流id
  string role = 10; // apaas角色
  string streamSid = 11; // rtc sid
  string rtmSid = 12; // rtm sid
  string roomId = 13; // apaas房间id，与rtc/rtm channelName相同
  int64 roomCreateTs = 14; // 房间创建时间
}